# dashend

./: .env.example  .gitignore  Cargo.toml  readme.md  servers.json.example
migrations/: 20240331200101_initial.sql  20240412145643_checks.sql  20240429180547_profile_colors.sql
src/: catchers.rs  main.rs  structs.rs  utils.rs
src/api/: auth.rs  mod.rs  profile.rs
