[package]
name = "dashend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
dotenvy = "0.15.7"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["sqlite"] }
thiserror = "1.0.58"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
