[package]
name = "dashend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
easy_base64 = "0.1.7"
rand = "0.8.5"
reqwest = "0.12.2"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
sha1_smol = "1.0.0"
sqlx = { version = "0.7.4", features = ["sqlite"] }
thiserror = "1.0.58"
timedmap = "1.0.2"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
